--- a/index.html
+++ b/index.html
@@ -5,8 +5,91 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Just Ate JS | Home</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
+    <!-- header with nav bar -->
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="./index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./favourites.html">My Favourites</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!-- section for the search form -->
+    <section class="container-md my-4 p-4 border">
+      <!-- headings -->
+      <h1 class="my-4 text-center">Just Ate JS</h1>
+      <h2 class="my-4 fs-4 text-center">
+        Choose from a wide range of restaurants
+      </h2>
+
+      <!-- restaurant form -->
+      <form id="search-form">
+        <div class="mb-3">
+          <label for="category-select" class="form-label text-start"
+            >Please select a category</label
+          >
+          <!-- category drop down -->
+          <select class="form-select" id="category-select">
+            <option value="all" selected>All</option>
+            <option value="Indian">Indian</option>
+            <option value="Sandwiches">Sandwiches</option>
+            <option value="Ramen">Ramen</option>
+            <option value="French">French</option>
+            <option value="Sandwiches">Sandwiches</option>
+            <option value="European">European</option>
+            <option value="Pizza">Pizza</option>
+            <option value="French">French</option>
+          </select>
+        </div>
+
+        <div class="d-grid gap-2 col-6 mx-auto mb-3">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </form>
+    </section>
+
+    <!-- section for restaurants -->
+    <section id="restaurants-section"></section>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./assets/js/restaurants.js"></script>
     <script src="./assets/js/index.js"></script>
   </body>
 </html>
